
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Mar-11 UPDATE   Per Uddén <p.udden@telia.com>
================================================================================
+3d-viewer
  * Fix TODO: Add S_ARC and S_CIRCLE shape render to board edge and module edge.
	Ex. Now is a board with arcs at corners showing correctly. 


2008-Mar-10 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
  * Improved some comments on new functions dirty area functions
  * Changed
    void    ConvertPcbUnitsToPixelsUnits( EDA_Rect& aRect ); to
    void    ConvertPcbUnitsToPixelsUnits( EDA_Rect* aRect );
    which I prefer because it is clearer to the human reader of the calling
    context that the passed argument is to be modified.  References as function
    arguments are fine, but if they are to be modified, passing by pointer
    gives human reader a clearer picture when looking at the calling context.
  * TRACK::GetBoundingBox() now (1) rounds up the radius, and (2) returns a bounding
    box which is [pos,dim) in nature, [inclusive, exclusive).
  * Changed from "new wxDCClip()" to use an automatic wxDCClip() variable in
    drawpanel.cpp
  * Removed a printf() from "release" build of drawpanel.cpp
  * Added WinEDA_DrawPanel::PostDirtyRect()
  * Renamed Supprime_Une_Piste() to Remove_One_Track() and it now uses
    PostDirtyRect().
  * void WinEDA_PcbFrame::Delete_net( wxDC* DC, TRACK* Track ) now redraws
    the screen after a net deletion.
  * eeschema/dialog_find.cpp: set the initial keyboard focus to the text control


2008-Mar-10 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    Pcbnew can import footprints in gpcb format in Nelib format only